--- a/style.css
+++ b/style.css
@@ -12,7 +12,7 @@
 html,body{
 
     height: 100%;
-    overflow-y: scroll;
+    overflow-y: hidden;
     overflow-x: hidden;
     max-width: 1600px;
 }
